Fix header sizing & spacing

--- a/front_end/assets/css/_type.styl
+++ b/front_end/assets/css/_type.styl
@@ -5,15 +5,13 @@ body
   font-family font-family-primary
   color base-step2
 
-h1, h2
-  margin-bottom spacing-block-small
-
 h1
   font-size font-size-largest
+  margin 5px 0 22px
 
 h2
   font-size font-size-medium
-  margin-bottom spacing-block-small - 5
+  margin-bottom 12px
   a
     text-decoration none
     color base-step2
@@ -21,7 +19,6 @@ h2
       text-decoration underline
 
 h4
-  font-size font-size-base - 1
   font-weight normal
   font-style italic
   color base-step4
